syntax = "proto3";

package bytebase.store;

import "store/common.proto";
import "store/plan_check_run.proto";

option go_package = "generated-go/store";

message TaskPayload {
  // common fields
  bool skipped = 1;
  string skipped_reason = 2;
  string spec_id = 3;
}

// TaskDatabaseCreatePayload is the task payload for creating databases.
message TaskDatabaseCreatePayload {
  // common fields
  bool skipped = 1;
  string skipped_reason = 2;
  string spec_id = 3;

  int32 project_id = 4;
  string database_name = 5;
  string table_name = 6;
  int32 sheet_id = 7;
  string character_set = 8;
  string collation = 9;
  string environment_id = 10;
  string labels = 11;
}

// TaskDatabaseDataUpdatePayload is the task payload for database data update (DML).
message TaskDatabaseDataUpdatePayload {
  // common fields
  bool skipped = 1;
  string skipped_reason = 2;
  string spec_id = 3;

  string schema_version = 4;
  int32 sheet_id = 5;

  PreUpdateBackupDetail pre_update_backup_detail = 6;
}

// TaskDatabaseSchemaPayload is the task payload for database schema baseline, update or ghost sync.
message TaskDatabaseSchemaPayload {
  // common fields
  bool skipped = 1;
  string skipped_reason = 2;
  string spec_id = 3;

  string schema_version = 4;
  // sheet_id is required for schema update.
  int32 sheet_id = 5;
  // flags is used for ghost sync
  map<string, string> flags = 6;
}

// TaskDatabaseDataExportPayload is the task payload for database data export.
message TaskDatabaseDataExportPayload {
  // common fields
  string spec_id = 1;

  int32 sheet_id = 2;
  string password = 3;
  ExportFormat format = 4;
}
