syntax = "proto3";

package bytebase.store;

option go_package = "generated-go/store";

message TaskRunResult {
  string detail = 1;
  // Format: instances/{instance}/databases/{database}/changeHistories/{changeHistory}
  string change_history = 2;
  string version = 3;

  // The following fields are used for error reporting.
  message Position {
    int32 line = 1;
    int32 column = 2;
  }
  Position start_position = 4;
  Position end_position = 5;

  // The uid of the export archive.
  int32 export_archive_uid = 6;

  // The prior backups that will be used to rollback the task run.
  repeated PriorBackupInfo prior_backups = 7;
}

message PriorBackupInfo {
  // The backup table information.
  string database = 1;
  string schema = 2;
  string table = 3;
  optional int32 original_line = 4;
}
